# digital-detox

./: .gitignore  Digital_detox_drive.ipynb  Digital_detox_googleAuth.ipynb  pyproject.toml
src/: detox_drive.py
src/backend/: detox_mail.py  getAuth.py
src/frontend/: app.py  hello.py
